--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ROI Calculator - Minerva</title>
-<!-- Aquí irían las referencias a los estilos CSS y cualquier otro recurso -->
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
