--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div id="roiExplanation"></div>
 </div>
 
-<!-- Aquí iría la referencia al código JavaScript -->
+<script src="script.js"></script>
 <script src="path_to_your_script.js"></script>
 
 </body>
