--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
   <!-- La facturación media por hora y la facturación adicional por empleado se calculan automáticamente y no son editables por el usuario -->
   <div class="output-field">
-    <label>Average Revenue per Hour per Employee ($):</label>
+    <label>Average Revenue per Hour per Employee before Minerva ($):</label>
     <span id="revenuePerHour"></span>
   </div>
 
   <div class="output-field">
-    <label>Additional Revenue per Employee per Year ($):</label>
+    <label>Additional Revenue per Employee per Year with Minerva ($):</label>
     <span id="additionalRevenuePerEmployee"></span>
   </div>
 
   <div class="output-field">
-    <label>Total Additional Revenue (all employees) ($):</label>
+    <label>Total Additional Revenue (all employees) with Minerva ($):</label>
     <span id="totalAdditionalRevenue"></span>
   </div>
 
